--- a/react_practice_dev/src/App.css
+++ b/react_practice_dev/src/App.css
@@ -20,4 +20,14 @@
   padding: 1rem;
 }
 
+.flex {
+  display:flex
+}
 
+.just-center{
+  justify-content: center;
+}
+
+.align-center{
+  align-items: center;
+}
