--- a/react_practice_dev/src/App.css
+++ b/react_practice_dev/src/App.css
@@ -1,4 +1,5 @@
 .App{
+  display: flex;
   padding: 5px;
   margin: auto;
   border: 2px solid black;
@@ -30,4 +31,13 @@
 
 .align-center{
   align-items: center;
+}
+
+
+.form{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  row-gap: 10px;
+  
 }
